--- a/pteid-mw-pt/_src/eidmw/misc/Wix_MW35/Autenticacao.gov-3.0/qml-app_x86.wxs
+++ b/pteid-mw-pt/_src/eidmw/misc/Wix_MW35/Autenticacao.gov-3.0/qml-app_x86.wxs
@@ -71,6 +71,13 @@
             <Component Id="cmp29B33F5BB418719C19229E9CD898CF8D" Directory="APPLICATIONROOTFOLDER" Guid="{482FA0B2-BB01-484B-8C8A-2DAAB4C1F942}">
                 <File Id="fil0B83CC8CFBA55D865EB2F2F8A25F2FD2" KeyPath="yes" Source="$(var.QMLDIR)\Qt5Network.dll" />
             </Component>
+           <!-- The following OpenSSL 1.0.2 DLLs are needed for Qt5Network TLS code - our migration is still incomplete...  -->
+            <Component Id="cmpD3A3E703C58A4E0CB0E1AD5BC981B9AA" Guid="{D3A3E703-C58A-4E0C-B0E1-AD5BC981B9AA}" Directory="APPLICATIONROOTFOLDER" >
+              <File Id="filessleay32" KeyPath="yes" Source="$(var.QMLDIR)\ssleay32.dll" />
+            </Component>
+            <Component Id="cmp00D03627EDE74542BA5DE511E4EB6EA7" Guid="{00D03627-EDE7-4542-BA5D-E511E4EB6EA7}" Directory="APPLICATIONROOTFOLDER" >
+              <File Id="filelibeay" KeyPath="yes" Source="$(var.QMLDIR)\libeay32.dll" />
+            </Component>
             <Component Id="cmpCA323A01DDF4FA35007EB259BDDFE3C1" Directory="APPLICATIONROOTFOLDER" Guid="{03CC75BD-E8B7-4335-85D8-99B7296C45DC}">
                 <File Id="fil8400A93B38A10837A86D11691BABA6EA" KeyPath="yes" Source="$(var.QMLDIR)\Qt5PrintSupport.dll" />
             </Component>
